--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,17 +26,14 @@ dist.jar=${dist.dir}/Toolbox.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.commons-fileupload-1.3.1.jar=lib\\commons-fileupload-1.3.1.jar
-file.reference.httpclient-4.3.3.jar=lib\\httpclient-4.3.3.jar
-file.reference.httpmime-4.3.3.jar=lib\\httpmime-4.3.3.jar
 file.reference.log4j-1.2.15.jar=lib\\log4j-1.2.15.jar
+file.reference.Retirement.jar=lib\\Retirement.jar
 file.reference.servlet-api.jar=lib\\servlet-api.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.log4j-1.2.15.jar}:\
     ${file.reference.servlet-api.jar}:\
-    ${file.reference.httpclient-4.3.3.jar}:\
-    ${file.reference.httpmime-4.3.3.jar}:\
     ${file.reference.commons-fileupload-1.3.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -48,7 +45,8 @@ javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit_4.classpath}
+    ${libs.junit_4.classpath}:\
+    ${file.reference.Retirement.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
